# taille-main

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: deploy.yml  test.yml
src/: database.rs  helpers.rs  main.rs
src/shared/: config.rs  database.rs  http_error.rs  mod.rs  role.rs
src/shared/middleware/: bearer_middleware.rs  master_key_middleware.rs  mod.rs
src/shared/model/: user.rs
src/shared/repository/: user_repository.rs
src/shared/rto/: created_rto.rs  mod.rs
src/trips/: mod.rs
src/trips/dto/: create_trip_dto.rs  get_trip_dto.rs  mod.rs
src/trips/model/: mod.rs
src/trips/repository/: mod.rs  trip_repository.rs
src/trips/rto/: get_trip_rto.rs  mod.rs
src/users/: mod.rs
src/users/dto/: create_user_dto.rs  get_user_dto.rs  mod.rs
src/users/model/: access_token_claims.rs  mod.rs  user.rs
src/users/repository/: user_repository.rs
src/users/rto/: create_user_rto.rs  get_user_rto.rs  mod.rs
