[package]
name = "taille-main"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = "0.16"
validator_derive = "0.16"    # for the `#[derive(Validate)]` macro

# For hashing with Bcrypt
bcrypt = "0.14"
jsonwebtoken = "9.3.0"
actix-web-lab = "0.23.0"
actix-governor = "0.8.0"
actix-web-httpauth = "0.8.2"
subtle = "2.6.1"
nanoid = "0.4.0"

[dev-dependencies]
actix-rt = "2.10.0"
once_cell = "1.20.2"
reqwest = { version = "0.12.12", features = ["json"] }
