[package]
name = "taille-main"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = "0.19"
validator_derive = "0.19"
bcrypt = "0.16"
jsonwebtoken = "9.3.0"
actix-web-lab = "0.23.0"
actix-governor = "0.8.0"
actix-web-httpauth = "0.8.2"
subtle = "2.6.1"
nanoid = "0.4.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
thiserror = "2.0.9"
fake = "3.1.0"
chrono = { version = "0.4.39", features = ["serde"] }

[dev-dependencies]
actix-rt = "2.10.0"
once_cell = "1.20.2"
reqwest = { version = "0.12.12", features = ["json"] }
